# SomeArcaneGameEngine

./: .gitignore  CMakeLists.txt  README.md  TODO.md  clearn.kdev4
lib/glad/include/glad/: gl.h
src/: kp_dynlist.c  kp_dynlist.h  kp_log.h  kp_macroutils.h  kp_memalloc.c  kp_memalloc.h  main.c
src/gfx/: models.c  models.h
